# agent-memory-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  repositioning_and_repo_change_plan.md  server.json
app/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
app/src/agent_memory_mcp/: __init__.py  __main__.py  config.py
app/src/agent_memory_mcp/api/: server.py
app/src/agent_memory_mcp/bot/: __init__.py  app.py  formatters.py  keyboards.py  middlewares.py  states.py
app/src/agent_memory_mcp/collector/: __init__.py  client.py  encryption.py  pool.py
app/src/agent_memory_mcp/db/: __init__.py  engine.py  queries.py  queries_conversations.py  queries_digest.py  queries_groups.py  tables.py
app/src/agent_memory_mcp/decision_pipeline/: extractor.py  prompts.py
app/src/agent_memory_mcp/digest/: clustering.py  runner.py
app/src/agent_memory_mcp/gpu/: __init__.py  manager.py
app/src/agent_memory_mcp/llm/: __init__.py  agent_prompt.py  client.py  digest_prompts.py  prompts.py  query_prompts.py
app/src/agent_memory_mcp/memory_api/: app.py  auth.py  jobs.py  mcp_tools.py  oauth.py  routes.py  schemas.py  service.py
app/src/agent_memory_mcp/models/: __init__.py  extraction.py  messages.py  query.py  schema.py
app/src/agent_memory_mcp/pipeline/: __init__.py  agent_context.py  agent_loop.py  agent_orchestrator.py  agent_tools.py  eval_datasets.py  eval_runner.py  history.py  pipelines.py  query_orchestrator.py  query_pipeline.py  tag_summarizer.py
app/src/agent_memory_mcp/scheduler/: __init__.py  scheduler.py
app/src/agent_memory_mcp/scripts/: auth_telethon.py  export_embeddings_to_phoenix.py  reembed.py
app/src/agent_memory_mcp/storage/: __init__.py  embedding_client.py  falkordb_client.py  milvus_client.py  reranker_client.py
app/src/agent_memory_mcp/ton/: payments.py
app/src/agent_memory_mcp/tracing/: __init__.py  tracer.py
app/src/agent_memory_mcp/utils/: links.py  tokens.py
docs/: pricing.md  (+1 more)
mcp-package/: pyproject.toml
mcp-package/src/agent_memory_mcp_server/: __init__.py  __main__.py  client.py  server.py
(+42 files in other folders)
