[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-mcp"
version = "0.1.0"
description = "MCP server for Agent Memory — Telegram memory layer for AI agents"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "fastmcp>=2.3.1",
    "httpx>=0.27",
]

[project.scripts]
agent-memory-mcp = "agent_memory_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory_mcp_server"]
